# AI_e-course_generator

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
backend/: ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  courses.py  upload.py
backend/app/core/: config.py  security.py
backend/app/database/: supabase.py
backend/app/prompts/: chat.py  course.py  lesson.py  quiz.py  system.py
backend/app/schemas/: auth.py
backend/app/services/: course_gen.py  ingest.py  rag.py
src/: routeTree.gen.ts  styles.css
src/api/: auth.ts  client.ts  courses.ts  upload.ts
src/components/chat/: chat-drawer.tsx
src/components/course/: course-card.tsx
src/components/layout/: app-shell.tsx  auth-guard.tsx
src/lib/: auth.tsx  mock-data.ts
src/routes/: __root.tsx  analytics.tsx  auth.tsx  chat.tsx  courses.$courseId.lessons.$lessonId.tsx  courses.$courseId.quiz.$quizId.tsx  courses.$courseId.tsx  courses.tsx  dashboard.tsx  history.tsx  index.tsx  search.tsx  settings.tsx  upload.tsx
